minor efficiency chage - Using .isEmpty() instead of .size() = 0 where possible.